Overflow fix

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -38,6 +38,7 @@
 
   .section:first-child {
       text-align: center;
+      overflow-x: hidden;
   }
 
   .section .menu {
